chore: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello GitHub Actions"
+
+  job-2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Production
+        run: echo "build job2"
         
     
