--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,16 +18,20 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COMPANY_NAME: 'NTPLC'
+    environment: development
     steps:
       - run: echo "Hello ${{ github.actor }} Repo ${{ env.REPO_NAME }}"
       - run: echo ${{ env.SERVER_IP }}
       - run: echo ${{ env.SERVER_PORT}}
       - run: echo ${{ env.COMPANY_NAME }}
+      - run: echo ${{ vars.APP_NAME }}
+      - run: echo ${{ secrets.API_KEY }}
 
   job-2:
     runs-on: ubuntu-latest
+    environment: production
     steps:
-      - name: Build Production
-        run: echo "Server IP -> ${{ env.SERVER_IP }}"
+      - run: echo "Server IP -> ${{ env.SERVER_IP }}"
+      - run: echo ${{ vars.APP_NAME}}
         
     
